--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "bootstrap": "^5.2.3"
   },
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "properties-reader": "^2.2.0",
+    "vinyl-fs": "^3.0.3",
+    "vinyl-ftp": "^0.6.1"
   }
 }
